Fix header logo alignment using a responsive CSS grid on desktop to force inline vertical centering

--- a/index.css
+++ b/index.css
@@ -277,9 +277,23 @@ section {
   }
 }
 
+@media (min-width: 992px) {
+  .header-container {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+  }
+}
+
 .logo-link {
   display: flex;
   align-items: center;
+}
+
+@media (min-width: 992px) {
+  .logo-link {
+    justify-self: start;
+  }
 }
 
 .header-logo {
@@ -296,9 +310,10 @@ section {
 @media (min-width: 992px) {
   .desktop-nav {
     display: block;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
+    left: auto;
+    transform: none;
+    justify-self: center;
   }
 }
 
@@ -309,6 +324,7 @@ section {
 @media (min-width: 992px) {
   .header-cta-container {
     display: block;
+    justify-self: end;
   }
 }
 
